<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/big_size_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state_icon"
        android:textSize="56sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/secondary_size_layout"
        android:fontFamily="@font/secondary_font"
        android:text="@string/no_recently_game"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/secondary_size"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/primary_size_layout"
        android:fontFamily="@font/subtext_font"
        android:text="@string/txt_no_recently_game_tip"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/sub_font_size"
        android:gravity="center"/>

</LinearLayout>