<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_root"
    android:padding="@dimen/third_size_layout"
    android:background="@drawable/alert_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_up"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/primary_font"
        android:textSize="@dimen/buttons_size"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dialogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_turn_found_A"
        android:fontFamily="@font/subtext_font"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_font_size"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/dialogText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SecondaryButtonStyle"
            android:text="@string/no_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SecondaryButtonStyle"
            android:layout_marginStart="15dp"
            android:text="@string/yes_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>