<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_linear_app_background_secondary">

        <!-- ✅ FIXED: Added layout_width and layout_height -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PrimaryButtonStyle"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/txt_skip"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/slideViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="100dp"
            android:contentDescription="@string/txt_view_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ✅ FIXED: Added layout_width and layout_height -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonWithoutBackground"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/txt_back"/>

        <!-- ✅ FIXED: Added layout_width and layout_height -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonWithoutBackground"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_next"/>

        <LinearLayout
            android:id="@+id/dotIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/slideViewPager">
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>